--- a/myChart/values.yaml
+++ b/myChart/values.yaml
@@ -11,8 +11,8 @@ image:
   tag: ""
 
 imagePullSecrets: []
-nameOverride: "miApp"
-fullnameOverride: "miApp"
+nameOverride: "miapp"
+fullnameOverride: "miapp"
 
 serviceAccount:
   # Specifies whether a service account should be created
@@ -21,7 +21,7 @@ serviceAccount:
   annotations: {}
   # The name of the service account to use.
   # If not set and create is true, a name is generated using the fullname template
-  name: "miApp"
+  name: "miapp"
 
 podAnnotations: {}
 
