--- a/mychart/Chart.yaml
+++ b/mychart/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v2
-name: myChart
+name: mychart
 description: A Helm chart for Kubernetes
 
 # A chart can be either an 'application' or a 'library' chart.
