--- a/mychart/values.yaml
+++ b/mychart/values.yaml
@@ -5,7 +5,7 @@
 replicaCount: 1
 
 image:
-  repository: https://github.com/nerdalert/iperf3
+  repository: networkstatic/iperf3
   pullPolicy: IfNotPresent
   # Overrides the image tag whose default is the chart appVersion.
   tag: ""
