--- a/mychart/templates/hpa.yaml
+++ b/mychart/templates/hpa.yaml
@@ -2,14 +2,14 @@
 apiVersion: autoscaling/v2beta1
 kind: HorizontalPodAutoscaler
 metadata:
-  name: {{ include "myChart.fullname" . }}
+  name: {{ include "ejemplo.fullname" . }}
   labels:
-    {{- include "myChart.labels" . | nindent 4 }}
+    {{- include "ejemplo.labels" . | nindent 4 }}
 spec:
   scaleTargetRef:
     apiVersion: apps/v1
     kind: Deployment
-    name: {{ include "myChart.fullname" . }}
+    name: {{ include "ejemplo.fullname" . }}
   minReplicas: {{ .Values.autoscaling.minReplicas }}
   maxReplicas: {{ .Values.autoscaling.maxReplicas }}
   metrics:
