--- a/mychart/templates/service.yaml
+++ b/mychart/templates/service.yaml
@@ -1,15 +1,15 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ include "myChart.fullname" . }}
+  name: pouring-puma-mychart
   labels:
-    {{- include "myChart.labels" . | nindent 4 }}
+    chart: "mychart-0.1.0"
 spec:
-  type: {{ .Values.service.type }}
+  type: ClusterIP
   ports:
-    - port: {{ .Values.service.port }}
-      targetPort: http
+    - port: 80
+      targetPort: 80
       protocol: TCP
-      name: http
+      name: ubuntu-upstart
   selector:
-    {{- include "myChart.selectorLabels" . | nindent 4 }}
+    app: pouring-puma-mychart
