--- a/mychart/templates/serviceaccount.yaml
+++ b/mychart/templates/serviceaccount.yaml
@@ -2,9 +2,9 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: {{ include "myChart.serviceAccountName" . }}
+  name: {{ include "ejemplo.serviceAccountName" . }}
   labels:
-    {{- include "myChart.labels" . | nindent 4 }}
+    {{- include "ejemplo.labels" . | nindent 4 }}
   {{- with .Values.serviceAccount.annotations }}
   annotations:
     {{- toYaml . | nindent 4 }}
